2001-08-18  Ulrich Drepper  <drepper@redhat.com>

	* conform/conformtest.pl: <inttypes.h> test required <stddef.h>.

	* wcsmbs/wchar.h (wcwdith): Change parameter type to wchar_t.
	* wcsmbs/wcwidth.c (wcwdith): Likewise.
	* wcsmbs/wcwidth.h (internal_wcwdith): Likewise.

	* conform/data/unistd.h-data: Remove _SC_MULTIPLE_PROCESS.

	* conform/data/ucontext.h-data: Fix typos in ucontext_t element tests.

	* time/time.h (struct timespec): Use __time_t for tv_sec element.

	* sysdeps/generic/inttypes.h: Define __wchar_t.  Use it instead of
	wchar_t for function declarations and defintions.

	* misc/sys/select.h: Define __need_time_t before including <time.h>.
	Define suseconds_t if it hasn't happened yet.

	* iconv/gconv.h: Define __need_wchar_t before including <stddef.h>.

	* conform/data/sys/uio.h-data: Allow UIO_MAXIOV to be defined.

	* sysdeps/generic/stdint.h: Don't get definition of wchar_t from
	<stddef.h>.

	* conform/data/stddef.h-data: Remove wint_t.

	* conform/conformtest.pl: Change namespace test to take #undef
	lines into account.

	* conform/data/netinet/in.h-data: Fix typo in allow-header line.

	* conform/data/sys/socket.h-data: Add sockatmark.

2001-08-17  Ulrich Drepper  <drepper@redhat.com>

	* io/fts.c: Update from recent BSD source.

2001-08-17  Roland McGrath  <roland@frob.com>

	* stdio-common/perror.c (perror) [! USE_IN_LIBIO]: Don't use _IO_fwide.
	* misc/error.c (error_tail, error, error_at_line) [! USE_IN_LIBIO]:
	Likewise.

2001-08-17  Ulrich Drepper  <drepper@redhat.com>

	* locale/duplocale.c (__duplocale): Also initialize the special
	__ctype_* elements.

	* conform/data/netdb.h-data: Adjust gai_strerror return type.

2001-08-17  Andreas Jaeger  <aj@suse.de>

	* misc/getpass.c: Include wchar.h for prototypes.
	* malloc/obstack.c: Likewise.

2001-08-17  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/svc_simple.c (universal): Use __write instead of write.

	* wcsmbs/wcscoll.c: Also define __wcscoll.